python-docker-k8s-workshop/week 3/use-case-2/deployment-backend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: subscription-manager-backend-deployment
  namespace: subscription-manager
spec:

  # 1. Cuantas copias queremos del pod?
  replicas: 1

  # 2. Como actualizar el pod?
  strategy: 
    type: Recreate

  # 3. Cuales pods son manejados en este deployment?
  selector:
    # Estos labels debe hacer match on los del pod
    matchLabels:
      app: subscription-manager-backend
  
  # Configuracion del pod
  template:
    metadata:
      # Labels selectores para el pod en este deploymen
      labels:
        app: subscription-manager-backend
    spec:
      containers:
        # nombre del contenedor y de la imagen
        - name: subscription-manager-backend
          image: pablorzmz/subscription-manager-backend:latest
          ports:
          # exponer puestos
          - containerPort: 8005
          # varibales de ambiente
          resources:
            requests:
              memory: 128Mi
              cpu: 250m
            limits:
              memory: "512Mi"  
              cpu: 500m
