python-docker-k8s-workshop/week 3/use-case-2/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscription-manager-backend-service
  labels:
    app: subscription-manager-backend
  namespace: subscription-manager
spec:
  selector:
    app: subscription-manager-backend
  ports:
    - protocol: TCP
      port: 8005
      targetPort: 8005
  type: ClusterIP
