python-docker-k8s-workshop/week 3/use-case-2/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscription-manager-ui-service
  labels:
    app: subscription-manager-ui
  namespace: subscription-manager
spec:
  selector:
    app: subscription-manager-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
  #type: LoadBalancer
