python-docker-k8s-workshop/week 3/use-case-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subscription-manager-ingress
  namespace: subscription-manager
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: subscription-manager-ui-service
            port:
              number: 80
